frontend scrollbar solved

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@ body,
 #root {
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 /* Fix placeholder text color */
@@ -79,10 +79,11 @@ body {
   max-width: 100%;
   margin: 0;
   text-align: initial;
-  min-height: 100svh;
+  height: 100svh;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 h1,
